--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/College\ Classroom.png);
+    background-image: url(Images/College\ Classroom.png);
     background-size: cover;
     background-position: center;
     border-radius: 25px;
